--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/arzuhussein/Development/lessons/rapator-final-project/venv/bin/python3.9"
+    "python.pythonPath": "/Users/ughurguliyev/Documents/django-projects/rapator-final-project/venv/bin/python3"
 }
