--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-js-asset==1.2.2
 django-mptt==0.11.0
 django-rosetta==0.9.5
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 idna==2.10
 kombu==5.0.2
 Pillow==8.1.0
@@ -24,6 +25,7 @@ polib==1.1.0
 prompt-toolkit==3.0.10
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
+PyJWT==2.0.1
 pytz==2020.5
 redis==3.5.3
 requests==2.25.1
