--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.0.2
+appnope==0.1.2
 asgiref==3.3.1
 autopep8==1.5.4
 backcall==0.2.0
@@ -41,7 +42,6 @@ PyJWT==2.0.1
 pytz==2020.5
 redis==3.5.3
 requests==2.25.1
-rosetta==0.3
 six==1.15.0
 sqlparse==0.4.1
 stories==4.0.0
